# trusttim-by-bananaphil

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  RESULTS.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/: settings.json
app/: layout.tsx  page.tsx
app/api/booking/: route.ts
app/api/chat/: route.ts
app/api/emergency/: route.ts
chunking/: .env.example  README.md  chunk.py  pyproject.toml  test_chunk.py
crawler/: .env.example  README.md  crawl.py  crawler-s3-policy.json  pyproject.toml  test_crawl.py
data/eval/: emergency-cases.json  faq-cases.json  golden-answers.json  scope-cases.json
data/eval/runs/: latest.jsonl
hackathon_docs/archive/: QUY-TRINH-DON-TIEP-BENH-NHAN-KHU-TU-NGUYEN-1-CS1.vi.md  Tim Ha Noi.vi.md  VAIC2026_Hackers-guidebook.md
hackathon_docs/guide/: AI Project Guidebook.md  Live-Demo-Script.md  Pitch-Deck-Content.md  Project-Description.md  Project-Description.txt  Project-Pitch.md  TrustTim-Pitch-Deck.pptx  TrustTim_Architecture-and-Implementation-Guide.md  TrustTim_Implementation-Spec.md  VAIC2026_Hackers-guidebook.en.md  VAIC2026_Problem-Statement-Analysis.md  VAIC2026_Scoring-Criteria-Guide.md  VAIC2026_Winning-Playbook.md  llm_api_example.md  trusttim_by_bananaphil_knowledge_base.md  university_admissions_chatbot_case_study.md
hackathon_docs/kb/: bhyt_pricing.md  booking.md  dictionary.json  doctor_schedule.md  hospital_info.md  procedures.md  rules.json
hackathon_docs/problem_statement/: Hanoi_heart_hospital_problem_statement.md  Hospital-Website-RAG-Inventory.md  PROCEDURE_FOR_PATIENT_RECEPTION_OUTPATIENT_EXAMINATION_TREATMENT.md
kb_ingest/: .env.example  README.md  ingest.py  pyproject.toml  test_ingest.py
lib/: env.ts  usage.ts
lib/booking/: mock-data.ts
lib/chat/: pipeline.ts  summarize.ts
lib/db/: client.ts  schema.sql  setup.ts
lib/embeddings/: client.ts
lib/emergency/: case.ts  classify.ts  responses.ts
lib/llm/: client.ts
lib/prompt/: generate-answer.ts  intent-classifier.ts  query-rewrite.ts  severity-classifier.ts  summarize-history.ts
lib/rag/: dictionary.ts  generate.ts  ingest.ts  kb-parser.ts  normalize.ts  rerank.ts  retrieve.ts  rewrite.ts  rules.ts
lib/scope/: classify.ts  responses.ts
pdf_ingest/: .env.example  README.md  ocr.py  parse_pdfs.py  pyproject.toml  test_parse_pdfs.py
rag_eval/: .env.example  RAG-EVAL-RESULTS.md  README.md  eval.py  pyproject.toml  test_eval.py
scripts/: eval.ts  selfcheck.ts
