[project]
name = "trusttim-pdf-ingest"
version = "0.1.0"
description = "Parse hospital PDFs (native or scanned) to markdown + metadata for later KB chunking."
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24,<2",
    "pymupdf4llm>=0.0.5,<1",
    "vietocr>=0.3.13,<1",
    "opencv-python-headless>=4.9,<5",
    "pillow>=10.4,<12",  # 10.2.0 has no cp313 wheel, fails building from sdist
    "boto3>=1.34,<2",
    "numpy>=1.26,<3",
]

[tool.uv]
# vietocr hard-pins pillow==10.2.0 (no cp313 wheel). Its actual Pillow usage is basic Image
# open/crop/convert, unaffected by later Pillow releases, so force the newer version instead.
override-dependencies = ["pillow>=10.4,<12"]
