[project]
name = "trusttim-pdf-ingest"
version = "0.1.0"
description = "Parse hospital PDFs (native or scanned) to markdown + metadata for later KB chunking."
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24,<2",
    "pymupdf4llm>=0.0.5,<1",
    "openai>=1.40,<2",   # vision-LLM OCR for scanned pages (gpt-4.1-mini)
    "boto3>=1.34,<2",
]
